--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -1,1 +1,12 @@
-<p>options works!</p>
+<div>
+    <nav>
+      <li><a routerLink="/student" routerLinkActive="active"> Vizualizare Date Personale </a></li>
+    </nav>
+  </div>
+
+  <div>
+    <nav>
+      <li><a routerLink="/" routerLinkActive="active"> another Link </a></li>
+    </nav>
+  </div>
+  <router-outlet></router-outlet>
