--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -6,7 +6,8 @@
 
   <div>
     <nav>
-      <li><a routerLink="/" routerLinkActive="active"> another Link </a></li>
+      <li><a routerLink="/addInfo" routerLinkActive="active"> Adauga date gestiune </a></li>
     </nav>
   </div>
+
   <router-outlet></router-outlet>
