adaugare serii si faculati

--- a/src/app/components/add-series/add-series.component.html
+++ b/src/app/components/add-series/add-series.component.html
@@ -1,1 +1,9 @@
-<p>add-series works!</p>
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label *ngIf='seriesToAdd' >Adauga seria</mat-label>
+      <input matInput [(ngModel)] = "seriesToAdd.name" [ngModelOptions]="{standalone: true}" placeholder="Adauga serie">
+    </mat-form-field>
+  
+
+  </form>
+  <button mat-button color="primary" class = "example-button-row" (click) = "submitNewSeries()">Adauga</button>
