--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -6,7 +6,13 @@
 
   <div>
     <nav>
-      <li><a routerLink="/" routerLinkActive="active"> another Link </a></li>
+      <li><a routerLink="/" routerLinkActive="active"> another Link2 </a></li>
+    </nav>
+  </div>
+
+  <div>
+    <nav>
+      <li><a routerLink="/student-info" routerLinkActive="active"> student-info asd </a></li>
     </nav>
   </div>
   <router-outlet></router-outlet>
