--- a/src/app/components/studentForm/studentForm.component.html
+++ b/src/app/components/studentForm/studentForm.component.html
@@ -1,3 +1,49 @@
-<p>
-  studentForm works!
-</p>
+<div class="example-container" *ngIf="currentUser">
+  <mat-form-field appearance="fill">
+    <mat-label>Father Initial</mat-label>
+    <input matInput [(ngModel)]="currentUser.father_initial" name="father_initial">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>Student Identification Number</mat-label>
+    <input matInput [(ngModel)]="currentUser.sin" name="sin">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>CNP</mat-label>
+    <input matInput [(ngModel)]="currentUser.cnp" name="cnp">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>Parola</mat-label>
+    <input matInput [(ngModel)]="currentUser.user.password" name="password">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>First Name</mat-label>
+    <input matInput [(ngModel)]="currentUser.user.firstName" name="firstName">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>Last Name</mat-label>
+    <input matInput [(ngModel)]="currentUser.user.lastName" name="lastName">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input matInput [(ngModel)]="currentUser.user.email" name="email">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="fill">
+    <mat-label>Phone Number</mat-label>
+    <input matInput [(ngModel)]="currentUser.user.phoneNumber" name="phoneNumber">
+  </mat-form-field>
+  <p>{{currentUser.father_initial}}</p>
+  <p>{{currentUser.sin}}</p>
+  <p>{{currentUser.cnp}}</p>
+  <p>{{currentUser.user.firstName}}</p>
+  <p>{{currentUser.user.lastName}}</p>
+  <p>{{currentUser.user.password}}</p>
+  <p>{{currentUser.user.email}}</p>
+  <p>{{currentUser.user.phoneNumber}}</p>
+</div>
