--- a/src/app/components/add-series/add-series.component.html
+++ b/src/app/components/add-series/add-series.component.html
@@ -1,7 +1,7 @@
 <form class="example-form">
     <mat-form-field class="example-full-width">
       <mat-label *ngIf='seriesToAdd' >Adauga seria</mat-label>
-      <input matInput [(ngModel)] = "seriesToAdd.name" [ngModelOptions]="{standalone: true}" placeholder="Adauga serie">
+      <input matInput [(ngModel)] = "seriesToAdd.name" name="seria.name" placeholder="Adauga serie">
     </mat-form-field>
   
 
