--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -15,5 +15,10 @@
       <li><a routerLink="/student-info" routerLinkActive="active"> student-info asd </a></li>
     </nav>
   </div>
+  <div>
+    <nav>
+      <li><a routerLink="/secretar" routerLinkActive="active"> secretar </a></li>
+    </nav>
+  </div>
 
   <router-outlet></router-outlet>
