--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -25,6 +25,25 @@
 </mat-list>
 
 
+<h4>mat-select</h4>
+<mat-form-field>
+  <mat-label>Pokemon</mat-label>
+  <mat-select [formControl]="grupeControl" multiple>
+    <mat-option>-- None --</mat-option>
+    <mat-optgroup *ngFor="let group of selectGroups" [label]="group.serie.name">
+      <mat-option *ngFor="let grupa of group.grupe" [value]="grupa">
+        {{grupa.number}} {{group.serie.name}}
+      </mat-option>
+    </mat-optgroup>
+  </mat-select>
+</mat-form-field>
+
+<label>Selected Courses:</label>
+<mat-list dense>
+	<mat-list-item *ngFor="let grupa of grupeControl.value">
+		{{grupa.number}} {{grupa.seria.name}}
+	</mat-list-item>
+</mat-list>
 
 <table *ngIf="dataSource" mat-table [dataSource] = "dataSource" class="mat-elevation-z8">
 
