--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -28,7 +28,7 @@
 <h4>mat-select</h4>
 <mat-form-field>
   <mat-label>Pokemon</mat-label>
-  <mat-select [formControl]="grupeControl" multiple>
+  <mat-select [formControl]="grupeControl" multiple (selectionChange)="onChange()">
     <mat-option>-- None --</mat-option>
     <mat-optgroup *ngFor="let group of selectGroups" [label]="group.serie.name">
       <mat-option *ngFor="let grupa of group.grupe" [value]="grupa">
