--- a/src/app/components/student-info/student-info.component.html
+++ b/src/app/components/student-info/student-info.component.html
@@ -42,6 +42,16 @@
       <td mat-cell *matCellDef="let element"> {{element.user.email}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="login">
+      <th mat-header-cell *matHeaderCellDef> Login </th>
+      <td mat-cell *matCellDef="let element"> {{element.user.login}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="password">
+      <th mat-header-cell *matHeaderCellDef> Password </th>
+      <td mat-cell *matCellDef="let element"> {{element.user.password}} </td>
+    </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
