--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -1,33 +1,19 @@
-<mat-form-field class="example-full-width">
-  <input type="text" placeholder="Select Courses" aria-label="Select Courses"
-  matInput [matAutocomplete]="auto" [formControl]="courseControl">
-  <mat-hint>Enter text to find a course by name</mat-hint>
-</mat-form-field>
-
-<mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-	<mat-option *ngFor="let course of filteredCourses | async" [value]="selectedCourses">
-		<div (click)="optionClicked($event, course)">
-			<mat-checkbox [checked]="course.selected" (change)="toggleSelection(course)" (click)="$event.stopPropagation()">
-				{{ course.clasa.name }}
-			</mat-checkbox>
-		</div>
-	</mat-option>
-</mat-autocomplete>
-
-<br><br>
-
-<label>Selected Courses:</label>
-<mat-list dense>
-	<mat-list-item *ngIf="selectedCourses?.length === 0">(None)</mat-list-item>
-	<mat-list-item *ngFor="let course of selectedCourses">
-		{{ course.clasa.name }}
-	</mat-list-item>
-</mat-list>
-
+<form>
+  <h4>mat-select</h4>
+  <mat-form-field>
+    <mat-label>Course</mat-label>
+    <mat-select [(ngModel)]="selectedCourse" name="course">
+      <mat-option *ngFor="let course of classes" [value]="course">
+        {{course.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <p *ngIf="selectedCourse"> Selected Course: {{selectedCourse.name}} </p>
+</form>
 
 <h4>mat-select</h4>
 <mat-form-field>
-  <mat-label>Pokemon</mat-label>
+  <mat-label>Grupe</mat-label>
   <mat-select [formControl]="grupeControl" multiple (selectionChange)="onChange()">
     <mat-option>-- None --</mat-option>
     <mat-optgroup *ngFor="let group of selectGroups" [label]="group.serie.name">
