send data between routes

--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -78,3 +78,5 @@
       (click)="selection.toggle(row)">
   </tr>
 </table>
+
+<button mat-button color="primary" (click)="goToEditGrades()">Edit grades</button>
