--- a/src/app/components/edit-grades/edit-grades.component.html
+++ b/src/app/components/edit-grades/edit-grades.component.html
@@ -17,13 +17,13 @@
 
   <ng-container matColumnDef="nota">
     <th mat-header-cell *matHeaderCellDef> Nota </th>
-    <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+    <td mat-cell *matCellDef="let element"> {{userGradeMap.get(element.student.user.id)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="notaNoua">
     <th mat-header-cell *matHeaderCellDef> Nota Noua </th>
     <td mat-cell *matCellDef="let element">
-      <input class="input" matInput type="number" max="10" min="1" mat-cell>
+      <input class="input" matInput type="number" max="10" min="1" mat-cell [(ngModel)]="element.grade" name="notaNoua">
     </td>
   </ng-container>
 
