--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -1,5 +1,4 @@
 <form>
-  <h4>mat-select</h4>
   <mat-form-field>
     <mat-label>Course</mat-label>
     <mat-select [(ngModel)]="selectedCourse" name="course">
@@ -8,28 +7,29 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <p *ngIf="selectedCourse"> Selected Course: {{selectedCourse.name}} </p>
+  <!-- <p *ngIf="selectedCourse"> Selected Course: {{selectedCourse.name}} </p> -->
+  <mat-form-field class="select">
+    <mat-label>Grupe</mat-label>
+    <mat-select [formControl]="grupeControl" multiple (selectionChange)="onChange()">
+      <mat-optgroup *ngFor="let group of selectGroups" [label]="group.serie.name">
+        <mat-option *ngFor="let grupa of group.grupe" [value]="grupa">
+          {{grupa.number}} {{group.serie.name}}
+        </mat-option>
+      </mat-optgroup>
+    </mat-select>
+  </mat-form-field>
+  
+  <button class="select" mat-button color="primary" mat-flat-button (click)="goToEditGrades()">Edit grades</button>
 </form>
 
-<h4>mat-select</h4>
-<mat-form-field>
-  <mat-label>Grupe</mat-label>
-  <mat-select [formControl]="grupeControl" multiple (selectionChange)="onChange()">
-    <mat-option>-- None --</mat-option>
-    <mat-optgroup *ngFor="let group of selectGroups" [label]="group.serie.name">
-      <mat-option *ngFor="let grupa of group.grupe" [value]="grupa">
-        {{grupa.number}} {{group.serie.name}}
-      </mat-option>
-    </mat-optgroup>
-  </mat-select>
-</mat-form-field>
 
-<label>Selected Courses:</label>
+
+<!-- <label>Selected Courses:</label>
 <mat-list dense>
 	<mat-list-item *ngFor="let grupa of grupeControl.value">
 		{{grupa.number}} {{grupa.seria.name}}
 	</mat-list-item>
-</mat-list>
+</mat-list> -->
 
 <table *ngIf="dataSource" mat-table [dataSource] = "dataSource" class="mat-elevation-z8">
 
@@ -79,4 +79,4 @@
   </tr>
 </table>
 
-<button mat-button color="primary" (click)="goToEditGrades()">Edit grades</button>
+
