--- a/src/app/components/edit-grades/edit-grades.component.html
+++ b/src/app/components/edit-grades/edit-grades.component.html
@@ -1,3 +1,5 @@
+<button class="button2" (click)="updateGrades()" mat-flat-button color="primary">Update Grades</button>
+
 <table *ngIf="checkDataSource()" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <ng-container matColumnDef="index">
@@ -17,7 +19,7 @@
 
   <ng-container matColumnDef="nota">
     <th mat-header-cell *matHeaderCellDef> Nota </th>
-    <td mat-cell *matCellDef="let element"> {{userGradeMap.get(element.student.user.id)}} </td>
+    <td mat-cell *matCellDef="let element"> {{userGradeMap.get(element.student.user.id) == 0 ? '-' : userGradeMap.get(element.student.user.id)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="notaNoua">
@@ -31,4 +33,3 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<button (click)="updateGrades()" mat-flat-button color="primary">Update Grades</button>
