--- a/src/app/components/secretary/secretary.component.css
+++ b/src/app/components/secretary/secretary.component.css
@@ -1,11 +1,17 @@
 table {
-  width: 100%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.example-form {
-  min-width: 150px;
+form {
   max-width: 500px;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.select {
+  margin-left: 15px;
 }
 
 .example-full-width {
