--- a/src/app/components/secretary/secretary.component.html
+++ b/src/app/components/secretary/secretary.component.html
@@ -30,7 +30,11 @@
 		{{grupa.number}} {{grupa.seria.name}}
 	</mat-list-item>
 </mat-list> -->
-
+<div>
+<mat-form-field class="filter">
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+</mat-form-field>
 <table *ngIf="dataSource" mat-table [dataSource] = "dataSource" class="mat-elevation-z8">
 
   <!-- Checkbox Column -->
@@ -78,5 +82,6 @@
       (click)="selection.toggle(row)">
   </tr>
 </table>
+</div>
 
 
