--- a/src/app/components/secretary/secretary.component.css
+++ b/src/app/components/secretary/secretary.component.css
@@ -10,6 +10,11 @@ form {
   margin-left: auto;
   margin-right: auto;
 }
+.filter {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: auto;
+}
 .select {
   margin-left: 15px;
 }
