--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -8,12 +8,12 @@
 
   <mat-form-field class="example-full-width">
     <mat-label>New Password</mat-label>
-    <input matInput [(ngModel)] = "newPassword1" [ngModelOptions]="{standalone: true}" placeholder="Password">
+    <input matInput type="password" [(ngModel)] = "newPassword1" [ngModelOptions]="{standalone: true}" placeholder="Password">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
     <mat-label>New Password</mat-label>
-    <input matInput [(ngModel)] = "newPassword2" [ngModelOptions]="{standalone: true}" placeholder="Password">
+    <input matInput type="password" [(ngModel)] = "newPassword2" [ngModelOptions]="{standalone: true}" placeholder="Password">
   </mat-form-field>
 <button mat-button color="primary" class = "example-button-row" (click) = "changePassword()">Submit</button>
 </div>
