--- a/src/app/components/studentForm/studentForm.component.css
+++ b/src/app/components/studentForm/studentForm.component.css
@@ -1,10 +1,22 @@
 .example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    width: 120px;
-  }
-  
-  .example-button-row {
-    display: table-cell;
-  }
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  width: 120px;
+}
+
+.parent {
+  display: flex;
+  justify-content: center;
+}
+.example-button-row .header{
+  display: flex;
+  justify-content: center;
+}
+
+.informatii-personale-form {
+  column-count: 3;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
