--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,8 @@
-<!-- <mat-sidenav-container class="example-container">
-  <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
-  <mat-sidenav-content>Main content</mat-sidenav-content>
-</mat-sidenav-container> -->
+<div class="button-row">
+  <button mat-raised-button (click)="datePersonale()" color="primary">Date Personale</button>
+  <button mat-raised-button (click)="changePassword()" color="primary">Schimba Parola</button>
+  <button mat-raised-button *ngIf="checkStudent" (click)="studentGrades()" color="primary">Situatie Scolara</button>
+  <button mat-raised-button *ngIf="checkSecretary" (click)="changeGrades()" color="primary">Edit Grades</button>
+  <button mat-raised-button (click)="logout()" color="primary">Logout</button>
+</div>
+
