--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -7,7 +7,7 @@
   
     <mat-form-field class="example-full-width">
       <mat-label>Password</mat-label>
-      <input matInput [(ngModel)] = "login.password" [ngModelOptions]="{standalone: true}" placeholder="Password">
+      <input matInput type="password" [(ngModel)] = "login.password" [ngModelOptions]="{standalone: true}" placeholder="Password">
     </mat-form-field>
   <button mat-button color="primary" class = "example-button-row" (click) = "submitUser()">Submit</button>
 </div>
